--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -108,6 +108,26 @@ const jsonLd = {
 
             {licenseConfig.enable && <License title={entry.data.title} slug={entry.slug} pubDate={entry.data.published} class="mb-6 rounded-xl license-container onload-animation"></License>}
 
+            <!-- Giscus Comments -->
+            <div class="mb-6 rounded-xl onload-animation">
+                <script src="https://giscus.app/client.js"
+                        data-repo="2beetle/fuwari_fork"
+                        data-repo-id="R_kgDONYIhmA"
+                        data-category="Announcements"
+                        data-category-id="DIC_kwDONYIhmM4Cs6Wt"
+                        data-mapping="pathname"
+                        data-strict="0"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="0"
+                        data-input-position="top"
+                        data-theme="preferred_color_scheme"
+                        data-lang="zh-CN"
+                        data-loading="lazy"
+                        crossorigin="anonymous"
+                        async>
+                </script>
+            </div>
+
         </div>
     </div>
 
