--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -117,7 +117,7 @@ const jsonLd = {
 
             <!-- Giscus Comments -->
             <div class="mb-6 rounded-xl onload-animation">
-                <script src="https://giscus.app/client.js"
+                <script is:inline src="https://giscus.app/client.js"
                         data-repo="2beetle/fuwari_fork"
                         data-repo-id="R_kgDONYIhmA"
                         data-category="Announcements"
